# vsgecompiler

./: .gitignore  CMakeLists.txt  input.txt
code/: ShaderStages.cpp  ShaderStages.hpp  base.hpp  main.cpp
code/compilers/: glsl_compiler.cpp  glsl_compiler.hpp
code/input_parser/: CompileRequest.hpp  InputFileParser.cpp  InputFileParser.hpp
code/io/: FileLoader.cpp  FileLoader.hpp  ShaderBundleWriter.cpp  ShaderBundleWriter.hpp
